# iRGA-public

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
.github/workflows/: ci.yml  sync-public.yml
app/: cli.py  config.py  csrf.py  database.py  main.py  templating.py
app/models/: __init__.py  cycle.py  entity.py  goal.py  review.py
app/routes/: __init__.py  admin.py  goals.py  home.py  reviews.py  status.py
app/services/: __init__.py  entity_service.py  goal_service.py  import_service.py  review_service.py  title_parser.py
app/templates/: 404.html  base.html  home.html
app/templates/admin/: entities.html
app/templates/goals/: list.html  map.html  tree.html
app/templates/reviews/: confirmation.html  enter.html
app/templates/status/: index.html
migrations/: env.py
migrations/versions/: 36a35b1d2a21_initial_tables_entities_goals_cycles_.py
scripts/: seed_dev.py
static/css/: input.css  style.css
static/js/: main.js
tests/: conftest.py  test_admin_routes.py  test_goal_service.py  test_goals_routes.py  test_import_service.py  test_org_branding.py  test_security.py  test_title_parser.py
tests/fixtures/: sample_goals.tsv
tests/ui/: conftest.py  test_admin.py  test_goal_tree.py  test_goals_list.py  test_ppp_dashboard.py  test_review_form.py  test_review_submit.py  test_strategiekaart.py
